--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="header_main">
       <div class="logo">
         <a href="./index.html" class="logo"><span>Web</span>Studio</a>
       </div>
@@ -66,7 +79,7 @@
       <section class="our_team">
         <h2>Our Team</h2>
         <ul>
-          <li>
+          <li class="team_card">
             <img
               src="./images/headshot_mark.jpg"
               alt="photo of Mark Guerrero"
@@ -76,7 +89,7 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="team_card">
             <img
               src="./images/headshot_tom.jpg"
               alt="photo of Tom Ford"
@@ -86,7 +99,7 @@
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="team_card">
             <img
               src="./images/headshot_camila.jpg"
               alt="photo of Camila Garcia"
@@ -96,7 +109,7 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="team_card">
             <img
               src="./images/headshot_daniel.jpg"
               alt="photo of Daniel Wilson"
@@ -108,9 +121,46 @@
           </li>
         </ul>
       </section>
+      <section class="our_portfolio">
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/Banking.jpg" alt="" />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/Cashless.jpg" alt="" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/Meditation.jpg" alt="" />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/Taxi.jpg" alt="" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/Screen.jpg" alt="" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/Courses.jpg" alt="" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
+    <footer class="footer_main">
+      <div class="logo">
+        <a href="./index.html"><span>Web</span>Studio</a>
+      </div>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
