changes to line height, portfolio section images, letter spacing

--- a/index.html
+++ b/index.html
@@ -125,32 +125,62 @@
         <h2>Our Portfolio</h2>
         <ul>
           <li>
-            <img src="./images/Banking.jpg" alt="" />
+            <img
+              src="./images/Banking.jpg"
+              alt="example of a banking app"
+              width="360"
+              height="300"
+            />
             <h3>Banking App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/Cashless.jpg" alt="" />
+            <img
+              src="./images/Cashless.jpg"
+              alt="phone used for payment"
+              width="360"
+              height="300"
+            />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/Meditation.jpg" alt="" />
+            <img
+              src="./images/Meditation.jpg"
+              alt="laptop used as a meditation"
+              width="360"
+              height="300"
+            />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/Taxi.jpg" alt="" />
+            <img
+              src="./images/Taxi.jpg"
+              alt="photo of the quarter of the vehicle"
+              width="360"
+              height="300"
+            />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/Screen.jpg" alt="" />
+            <img
+              src="./images/Screen.jpg"
+              alt="example of mobile phone screen savers"
+              width="360"
+              height="300"
+            />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/Courses.jpg" alt="" />
+            <img
+              src="./images/Courses.jpg"
+              alt="happy person listening to something"
+              width="360"
+              height="300"
+            />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
